// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component should render correctly with alignItems prop 1`] = `
<div
  className="sc-kDDrLX hzrxLc"
/>
`;

exports[`Row component should render correctly with margin all sides prop 1`] = `
<div
  className="sc-kDDrLX idAfrr"
/>
`;

exports[`Row component should render correctly with margin each axis prop 1`] = `
<div
  className="sc-kDDrLX idymvs"
/>
`;

exports[`Row component should render correctly with margin each sides props 1`] = `
<div
  className="sc-kDDrLX khSWMh"
/>
`;

exports[`Row component should render correctly without props 1`] = `
<div
  className="sc-kDDrLX hFFvKj"
/>
`;
